Finish delete multiple users
