# server/swagger_output.json
@@ -350,6 +350,14 @@
             "description": "OK"
           }
         }
+      },
+      "delete": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/api/users/{userId}": {
